--- a/pure.html
+++ b/pure.html
@@ -8,6 +8,7 @@
     <div id="space" style="display: flex; flex-wrap: wrap"></div>
   </body>
 
+  <script lang="javascript" src="./HtmlElementClass.js"></script>
   <script lang="javascript" src="./AppClass.js"></script>
   <script lang="javascript" src="./PureClass.js"></script>
   <script lang="javascript" src="./settings.js"></script>
