--- a/architect.html
+++ b/architect.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Pure JS</title>
+    <title>HTML Architect</title>
   </head>
 
   <body>
@@ -8,9 +8,9 @@
     <div id="space" style="display: flex; flex-wrap: wrap"></div>
   </body>
 
-  <script lang="javascript" src="./HtmlElementClass.js"></script>
+  <script lang="javascript" src="./HtmlBlockClass.js"></script>
   <script lang="javascript" src="./AppClass.js"></script>
-  <script lang="javascript" src="./PureClass.js"></script>
+  <script lang="javascript" src="./ArchitectClass.js"></script>
   <script lang="javascript" src="./settings.js"></script>
-  <script lang="javascript" src="./pure.js"></script>
+  <script lang="javascript" src="./architect.js"></script>
 </html>
