feat: select, create, delete several elements

--- a/architect.html
+++ b/architect.html
@@ -10,7 +10,7 @@
 
   <script lang="javascript" src="./HtmlBlockClass.js"></script>
   <script lang="javascript" src="./AppClass.js"></script>
-  <script lang="javascript" src="./ArchitectClass.js"></script>
+  <script lang="javascript" src="./HtmlArchitectClass.js"></script>
   <script lang="javascript" src="./settings.js"></script>
   <script lang="javascript" src="./architect.js"></script>
 </html>
