feat: set background

--- a/architect.html
+++ b/architect.html
@@ -1,11 +1,17 @@
-<html>
+<html style="padding: 0; margin: 0">
   <head>
     <title>HTML Architect</title>
   </head>
 
-  <body>
-    <div id="tools"></div>
-    <div id="space" style="display: flex; flex-wrap: wrap"></div>
+  <body style="padding: 0; margin: 0">
+    <div id="tools" style="border-bottom: 1px solid #bab; display: flex">
+      <div
+        id="toolsLeft"
+        style="padding: 20px; border-right: 1px solid #bab"
+      ></div>
+      <div id="toolsRight" style="padding: 20px"></div>
+    </div>
+    <div id="space" style="display: flex; flex-wrap: wrap; padding: 20px"></div>
   </body>
 
   <script lang="javascript" src="./HtmlBlockClass.js"></script>
