feat: generate input fields for css settings automatically

--- a/architect.html
+++ b/architect.html
@@ -9,10 +9,21 @@
         id="toolsLeft"
         style="padding: 20px; border-right: 1px solid #bab"
       ></div>
-      <div id="toolsRight" style="padding: 20px"></div>
+      <div
+        id="toolsRight"
+        style="display: flex; gap: 10px; padding: 20px"
+      ></div>
     </div>
     <div id="space" style="display: flex; flex-wrap: wrap; padding: 20px"></div>
   </body>
+
+  <script
+    lang="javascript"
+    src="./js/dictionaries/dictionaryColors.js"
+  ></script>
+  <script lang="javascript" src="./js/dictionaries.js"></script>
+
+  <script lang="javascript" src="./js/cssSettings.js"></script>
 
   <script lang="javascript" src="./HtmlBlockClass.js"></script>
   <script lang="javascript" src="./AppClass.js"></script>
