fix: items in scheme not delete properly

--- a/architect.html
+++ b/architect.html
@@ -1,4 +1,4 @@
-<html style="padding: 0; margin: 0">
+<html style="padding: 0; margin: 0" lang="en">
   <head>
     <title>HTML Architect</title>
   </head>
@@ -14,7 +14,7 @@
         style="display: flex; gap: 10px; padding: 20px"
       ></div>
     </div>
-    <div id="space" style="display: flex; flex-wrap: wrap; padding: 20px"></div>
+    <div id="root" style="display: flex; flex-wrap: wrap; padding: 20px"></div>
   </body>
 
   <script
